Merged branch dynamicjava-generics back into trunk (branch created with rev 3817)
git-svn-id: file:///tmp/test-svn/trunk@4272 fe72c1cf-3628-48e9-8b72-1c46755d3cff